[package]
name = "raydium-cpmm-cpi"
version = "0.1.0"
description = "CPI adapter for Raydium CPMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_cpmm_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["cpi"]
devnet = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.29.0", features = ["metadata"] }
solana-program = ">=1.16, <1.18"
spl-memo = "4.0.0"
