[package]
name = "raydium-amm-cpi"
version = "0.1.0"
description = "CPI adapter for Raydium AMM"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_amm_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["cpi"]
devnet = []

[dependencies]
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
solana-program = ">=1.16, <1.18"
spl-token = "=4.0.0"
spl-memo = "=4.0.0"
spl-associated-token-account = { version = "2.2.0", features = [
    "no-entrypoint",
] }
num_enum = "=0.7.0"
ahash = "=0.8.6"
