[package]
name = "raydium-clmm-cpi"
version = "0.1.0"
description = "CPI adapter for Raydium CLMM"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "raydium_clmm_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["cpi"]
devnet = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.1", features = ["metadata", "memo"] }
